--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <audio autostart="true" autoplay="true"></audio>
   <script src="dist/bundle.js"></script>
 </body>
 </html>
