--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Destructor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body onload="main">
   <audio autostart="true" autoplay="true"></audio>
   <script src="dist/bundle.js"></script>
 </body>
