--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Destructor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="dist/bundle.js"></script>
 </head>
 <body>
-  <script src="dist/bundle.js"></script>
+  <audio autostart="true" autoplay="true"></audio>
+  
 </body>
 </html>
