refact unneccessary code comments delete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="dist/bundle.js"></script>
 </head>
 <body>
-  <audio autostart="true" autoplay="true"></audio>
+  <audio autostart="true" autoplay="true" loop></audio>
   
 </body>
 </html>
